Moved the load of new game into LoadGameInteractor